<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="droid_controller">Droid Controller</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="enable">Enable</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="bt_reason">Bluetooth needs to be enabled to connect to the Droid.</string>
    <string name="grant_location">enable location</string>
    <string name="permissions_settings">Location Permission Settings</string>
    <string name="settings">Settings</string>
    <string name="permission_reason">Android also requires us to ask for the location permission when dealing with bluetooth. This app does not actually fetch your location.</string>
    <string name="location_error">We need the location permission to search for bluetooth devices. (But we don\'t actually fetch your location.)</string>
    <string name="connection_hint">The Droid can only have one active connection at a time. Make sure that your controller is off and the Droid Depot app is closed.</string>
    <string name="timeout_info">Sometimes this takes a while. Turn your Droid off then on again if this lasts longer than 30 seconds.</string>
    <string name="advanced_controls_warning">This will send raw data to your droid. Do not use this if you don\'t know what you are doing. Use at your own risk.</string>
    <string name="advanced_controls_info">Format each line with \"command, delayInMillis\".\n\n\"1234\", \"12 34\" and \"12:34\" or all accepted formats for the command.\n\ne.g.\"27 42 0f 44 44 00 1f 0a, 100\n\n27 42 0f 44 44 00 18 00, 1000\"</string>
    <string name="scan">Scan</string>
    <string name="scan_for_droids">Scan For Droids</string>
    <string name="scanning">Scanning</string>
    <string name="menu_stop">Stop</string>
    <string name="custom_command">Commands</string>
    <string name="start">Start</string>
    <string name="ok">OK</string>
    <string name="playing">Playing</string>
    <string name="cancel">Cancel</string>
    <string name="import_from_file">Import</string>
    <string name="identify">Identify</string>
    <string name="blaster">Blaster</string>
    <string name="volume">Volume</string>
    <string name="speed">Speed</string>
    <string name="sounds">Sounds</string>
    <string name="controls">Controls</string>
    <string name="joystick">Joystick (Coming Soon)</string>
    <string name="buttons">Buttons</string>
    <string name="advanced">Advanced</string>
    <string name="connection">Connection</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="reaction1">Reaction 1</string>
    <string name="reaction2">Reaction 2</string>
    <string name="reaction3">Reaction 3</string>
    <string name="reaction4">Reaction 4</string>
    <string name="reaction5">Reaction 5</string>
    <string name="reaction6">Reaction 6</string>
    <string name="reaction7">Reaction 7</string>
    <string name="reaction8">Reaction 8</string>

    <string name="droid_name">Droid Name</string>
    <string name="r_unit">R Unit</string>
    <string name="bb_unit">BB Unit</string>

    <string name="head_turning">Head turning is only available on R Units</string>
</resources>
