<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:title="@string/droid_controller"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/volume_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:layout_marginStart="12dp"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/volume"
            app:layout_constraintBottom_toBottomOf="@id/volume" />

        <com.google.android.material.slider.Slider
            android:id="@+id/volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="31"
            android:value="31"
            android:stepSize="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/slider_barrier"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:layout_marginStart="12dp"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/speed"
            app:layout_constraintBottom_toBottomOf="@id/speed" />

        <com.google.android.material.slider.Slider
            android:id="@+id/speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="255"
            android:value="255"
            android:stepSize="1"
            app:layout_constraintTop_toBottomOf="@id/volume"
            app:layout_constraintStart_toEndOf="@id/slider_barrier"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/slider_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="speed_text,volume_text"
            app:barrierDirection="end" />

        <TextView
            android:id="@+id/sound_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sounds"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speed" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/sound_buttons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sound_text"
            app:layout_constraintBottom_toTopOf="@id/controls_top"
            app:constraint_referenced_ids="identify,blaster,reaction1,reaction2,reaction3,reaction4,reaction5,reaction6,reaction7,reaction8"
            app:flow_verticalBias="0"
            app:flow_verticalStyle="packed"
            app:flow_verticalGap="8dp"
            app:flow_wrapMode="aligned"
            app:flow_horizontalAlign="start"
            app:flow_verticalAlign="top"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/identify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identify" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/blaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blaster" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reaction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reaction2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reaction3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reaction4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reaction5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reaction6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reaction7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reaction8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction8" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/controls_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="joystick,forward" />

        <io.github.controlwear.virtual.joystick.android.JoystickView
            android:id="@+id/joystick"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_marginBottom="32dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:JV_backgroundColor="?colorSecondary"
            app:JV_buttonColor="?colorPrimaryVariant"/>

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:backgroundTint="@color/primaryLightColor"
            android:src="@drawable/ic_up_48"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/backwards"
            app:layout_constraintStart_toStartOf="@id/backwards"
            app:layout_constraintEnd_toEndOf="@id/backwards" />

        <ImageButton
            android:id="@+id/backwards"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:backgroundTint="@color/primaryLightColor"
            android:src="@drawable/ic_down_48"
            android:layout_marginBottom="48dp"
            android:layout_marginStart="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/head_left"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:backgroundTint="@color/primaryLightColor"
            android:src="@drawable/ic_chevron_left_48"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@id/joystick"
            app:layout_constraintTop_toTopOf="@id/joystick"
            app:layout_constraintEnd_toStartOf="@id/head_right"/>

        <ImageButton
            android:id="@+id/head_right"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:backgroundTint="@color/primaryLightColor"
            android:src="@drawable/ic_chevron_right_48"
            android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/head_left"
            app:layout_constraintTop_toTopOf="@id/head_left" />

        <ImageButton
            android:id="@+id/left"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:backgroundTint="@color/primaryLightColor"
            android:src="@drawable/ic_left_48"
            android:layout_marginEnd="12dp"
            app:layout_constraintBottom_toBottomOf="@id/backwards"
            app:layout_constraintTop_toTopOf="@id/backwards"
            app:layout_constraintEnd_toStartOf="@id/right"/>

        <ImageButton
            android:id="@+id/right"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:backgroundTint="@color/primaryLightColor"
            android:src="@drawable/ic_right_48"
            android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/left"
            app:layout_constraintTop_toTopOf="@id/left" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/button_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:constraint_referenced_ids="forward, backwards, left, right"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>