<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:hint="@string/droid_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:scrollbars="vertical" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/droid_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/r_unit"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipCornerRadius="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_unit"
            android:checked="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bb_unit"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipCornerRadius="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bb_unit" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/ok"
        app:layout_constraintEnd_toStartOf="@id/ok"
        app:layout_constraintTop_toTopOf="@id/ok" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/droid_type" />

</androidx.constraintlayout.widget.ConstraintLayout>
