<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/warning"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:tint="?colorPrimaryVariant"
            app:layout_constraintBottom_toBottomOf="@id/warning_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/warning_text"
            app:srcCompat="@drawable/ic_warning_24" />

        <TextView
            android:id="@+id/warning_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/advanced_controls_warning"
            android:textColor="?colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/warning"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/advanced_info"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:alpha="0.6"
            android:tint="?colorOnSurface"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/advanced_info_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/advanced_info_text"
            app:srcCompat="@drawable/ic_info_24" />

        <TextView
            android:id="@+id/advanced_info_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:alpha="0.6"
            android:text="@string/advanced_controls_info"
            android:textColor="?colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/advanced_info"
            app:layout_constraintTop_toBottomOf="@id/warning_text"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:hint="@string/custom_command"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/advanced_info_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/start"
            app:layout_constraintEnd_toStartOf="@id/start"
            app:layout_constraintTop_toTopOf="@id/start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/import_from_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/import_from_file"
            app:layout_constraintTop_toTopOf="@id/start"
            app:layout_constraintBottom_toBottomOf="@id/start"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>