<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="192dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/bt_info"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/ic_info_24"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/bt_info_text"
        app:layout_constraintTop_toTopOf="@id/bt_info_text"
        app:layout_constraintBottom_toBottomOf="@id/bt_info_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bt_info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?colorOnPrimary"
        android:text="@string/bt_reason"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@id/bt_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <ImageView
        android:id="@+id/location_info"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/ic_info_24"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/location_info_text"
        app:layout_constraintTop_toTopOf="@id/location_info_text"
        app:layout_constraintBottom_toBottomOf="@id/location_info_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location_info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?colorOnPrimary"
        android:text="@string/permission_reason"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@id/bluetooth"
        app:layout_constraintStart_toEndOf="@id/location_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_info_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bluetooth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/enable_bluetooth"
        app:backgroundTint="@color/white"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/grant_location"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/location_settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/location_settings"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/permissions_settings"
        android:textColor="?colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>